Updated layer caravans.

--- a/+layers/+communication/slack/install
+++ b/+layers/+communication/slack/install
@@ -1,5 +1,5 @@
 #!/bin/bash
 
 # slack-desktop is an AUR pkg, so we'll use yaourt to help
-yaourt -S --needed slack-desktop
+yaourt -S --needed --noconfirm slack-desktop
 
